--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url(https://db.onlinewebfonts.com/c/3066b11123e63381b8e2aa554b18bf32?family=Bauhaus+93+V1);
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+	--primary: #0d171f;
+	--second: #0998a8;
+	--bgColor: #192938;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2,
+h4,
+p {
+	color: #ffffff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+	position: relative;
+	background-color: var(--bgColor);
+	font-family: 'Roboto', sans-serif;
+	width: 100%;
+	min-height: 100vh;
+	overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+	max-width: 100%;
+	width: 100%;
+	height: 100%;
+	margin-inline: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section {
+	position: absolute;
+	top: 100vh;
+	bottom: 0;
+	width: 100%;
+	padding: 0 30px 0 30px;
+	opacity: 0;
+	transition: all 1s ease-in-out;
+	transform-origin: bottom;
+	z-index: 1000;
+	overflow: hidden;
+}
+
+section::-webkit-scrollbar {
+	display: none;
+}
+
+section.active {
+	top: 100px;
+	height: auto;
+	overflow-y: visible;
+	opacity: 1;
+}
+
+table {
+	caption-side: bottom;
+	border-collapse: collapse;
+}
+
+.table {
+	--bs-table-color-type: initial;
+	--bs-table-bg-type: initial;
+	--bs-table-color-state: initial;
+	--bs-table-bg-state: initial;
+	--bs-table-color: var(--bs-emphasis-color);
+	--bs-table-bg: var(--bs-body-bg);
+	--bs-table-border-color: var(--bs-border-color);
+	--bs-table-accent-bg: transparent;
+	--bs-table-striped-color: var(--bs-emphasis-color);
+	--bs-table-striped-bg: rgba(var(--bs-emphasis-color-rgb), 0.05);
+	--bs-table-active-color: var(--bs-emphasis-color);
+	--bs-table-active-bg: rgba(var(--bs-emphasis-color-rgb), 0.1);
+	--bs-table-hover-color: var(--bs-emphasis-color);
+	--bs-table-hover-bg: rgba(var(--bs-emphasis-color-rgb), 0.075);
+	width: 100%;
+	margin-bottom: 1rem;
+	vertical-align: top;
+	border-color: var(--bs-table-border-color);
+}
+
+.table > thead {
+	vertical-align: bottom;
+}
+
+th {
+	text-align: inherit;
+	text-align: -webkit-match-parent;
+}
+
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+	border-color: inherit;
+	border-width: 0;
+}
+
+.col {
+	flex: 1 0;
+}
+
+.table-borderless > :not(:first-child) {
+	border-top-width: 0;
+}
+
+.table > tbody {
+	vertical-align: inherit;
+}
+
+.table-borderless > :not(caption) > * > * {
+	border-bottom-width: 0;
+}
+
+.table > :not(caption) > * > * {
+	padding: 0.5rem 0.5rem;
+	color: var(
+		--bs-table-color-state,
+		var(--bs-table-color-type, var(--bs-table-color))
+	);
+	background-color: var(--bs-table-bg);
+	border-bottom-width: var(--bs-border-width);
+	box-shadow: inset 0 0 0 9999px
+		var(--bs-table-bg-state, var(--bs-table-bg-type, var(--bs-table-accent-bg)));
 }
